[workspace]
members = [
    "generate",
    "integration",
    "performance",
    "s2n-tls",
    "s2n-tls-sys",
]

[profile.release]
lto = true
codegen-units = 1
incremental = false

[profile.bench]
lto = true
codegen-units = 1
incremental = false
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'

