[package]
name = "performance"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
criterion = "0.3.4"
criterion-perf-events = "0.1.3"
pprof = { version = "0.3", features = ["flamegraph"]}

# https://www.jibbow.com/posts/criterion-flamegraphs/
[[bench]]
name = "default"
harness = false
path = "benchmark/default.rs"
