[package]
name = "s2n-tls-sys"
version = "0.1.0"
authors = ["Cameron Bytheway <bythewc@amazon.com>"]
edition = "2018"
links = "s2n-tls"
license = "Apache-2.0"

[features]
default = []
pq = []
quic = []

[dependencies]
libc = "0.2"
openssl-sys = { version = "0.9" }
criterion = "0.3"
criterion-macro = "0.3.4"
pprof = { version = "0.3", features = ["flamegraph"]}

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

# https://www.jibbow.com/posts/criterion-flamegraphs/
[[bench]]
name = "drbg"
harness = false

[profile.bench]
debug = true
debug-assertions = true
overflow-checks = true
panic = 'unwind'
